<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.mentormate.foodwars.domain.vo.profile.ProfileUIModel" />

        <variable
            name="presenter"
            type="com.mentormate.foodwars.ui.profile.ProfilePresenter" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ProfileFragment">

            <include
                android:id="@+id/toolbar_profile"
                layout="@layout/toolbar_profile" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="@dimen/profile_image"
                android:layout_height="@dimen/profile_image"
                android:layout_marginTop="@dimen/profile_image_margin_top"
                android:clickable="true"
                android:contentDescription="@string/profile_picture"
                android:focusable="true"
                android:onClick="@{() -> presenter.profilePictureClicked()}"
                android:src="@drawable/user_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_profile"
                app:urlByGlide="@{model.userUIModel.picture}" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_basic_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/profile_card_basic_background"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_picture">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_screen_card_view_element_side_margin"
                        android:gravity="start"
                        android:singleLine="true"
                        android:text="@string/basic_information"
                        android:textColor="@color/white"
                        android:textSize="@dimen/basic_information_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/profile_screen_card_view_element_side_margin"
                        android:layout_marginRight="@dimen/profile_screen_card_view_element_side_margin"
                        android:drawablePadding="@dimen/drawable_padding_text_view"
                        android:singleLine="true"
                        android:text="@{model.userUIModel.fullName}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/name_text_size"
                        app:drawableLeftCompat="@drawable/person_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title1" />

                    <TextView
                        android:id="@+id/email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/profile_screen_card_view_element_side_margin"
                        android:layout_marginRight="@dimen/profile_screen_card_view_element_side_margin"
                        android:drawablePadding="@dimen/drawable_padding_text_view"
                        android:singleLine="true"
                        android:text="@{model.userUIModel.email}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/email_text_size"
                        app:drawableLeftCompat="@drawable/email_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/full_name" />

                    <TextView
                        android:id="@+id/gender_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/profile_screen_card_view_element_side_margin"
                        android:layout_marginRight="@dimen/profile_screen_card_view_element_side_margin"
                        android:drawablePadding="@dimen/drawable_padding_text_view"
                        android:singleLine="true"
                        android:text="@{model.userUIModel.gender}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/gender_text_size"
                        app:drawableLeftCompat="@drawable/female_icon"
                        app:genderTextIcon="@{model.userUIModel.gender}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/profile_range_card_background"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_basic_info">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/range"
                        android:textColor="@color/white"
                        android:textSize="@dimen/range_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/range_slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/profile_screen_card_view_element_side_margin"
                        android:layout_marginRight="@dimen/profile_screen_card_view_element_side_margin"
                        android:valueFrom="1"
                        android:valueTo="1000"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title2"
                        app:sliderRange="@={model.sliderRange}" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/current_location_card_view_height"
                app:cardBackgroundColor="@color/profile_current_location_card_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_range">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_screen_card_view_element_side_margin"
                        android:gravity="start"
                        android:singleLine="true"
                        android:text="@string/current_location"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/current_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/profile_screen_card_view_element_side_margin"
                        android:layout_marginTop="@dimen/user_location_text_margin_top"
                        android:gravity="start"
                        android:singleLine="true"
                        android:text="@string/user_location"
                        android:textColor="@color/white"
                        android:textSize="@dimen/current_location_text_size"
                        app:drawableLeftCompat="@drawable/location_icon"
                        app:layout_constraintTop_toBottomOf="@+id/title3" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/change_location_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/shadow_blue"
                        android:gravity="start"
                        android:onClick="@{() -> presenter.changeLocationClicked()}"
                        android:text="@string/change_location"
                        app:drawableLeftCompat="@drawable/location_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/current_location" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_preference"
                android:layout_width="match_parent"
                android:layout_height="@dimen/current_location_card_view_height"
                app:cardBackgroundColor="#721BCD14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_location">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/preference"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/spinner_interests"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/spinner_design"
                        android:gravity="center"
                        android:popupBackground="@color/fade_green"
                        android:selectedItemPosition="@={model.interest}"
                        app:interestAdapter="@{model.subNomenclatures}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title4" />

                    <TextView
                        android:id="@+id/last_time_sync_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:gravity="start"
                        android:text="@string/last_time_sync"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner_interests"
                        app:lastSyncTime="@{model.lastSync}"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sync_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:gravity="start"
                        android:onClick="@{() -> presenter.syncButtonClicked()}"
                        android:text="@string/sync_data"
                        app:drawableLeftCompat="@drawable/sync_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/last_time_sync_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:gravity="start"
                android:onClick="@{() -> presenter.logoutButtonClicked()}"
                android:text="@string/log_out"
                app:drawableLeftCompat="@drawable/logout_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_view_preference" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>